--- a/Android/BasicVideoCall/app/src/main/AndroidManifest.xml
+++ b/Android/BasicVideoCall/app/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".WhiteboardActivity"
+            android:label="@string/title_activity_whiteboard"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings" />
         <activity
