add demo for external video capturer

--- a/Windows/PanoDemo/PanoDemo/PanoDemo.rc
+++ b/Windows/PanoDemo/PanoDemo/PanoDemo.rc
@@ -70,7 +70,7 @@ BEGIN
     GROUPBOX        "",IDC_STATIC,7,7,115,88
 END
 
-IDD_MAINDLG DIALOGEX 0, 0, 486, 300
+IDD_MAINDLG DIALOGEX 0, 0, 486, 315
 STYLE DS_SETFONT | WS_MINIMIZEBOX | WS_CAPTION | WS_SYSMENU
 CAPTION "PanoRtcDemo"
 FONT 9, "Segoe UI", 0, 0, 0x0
@@ -88,28 +88,31 @@ BEGIN
     CONTROL         "Mirror",IDC_CHECK_MIRROR,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,265,126,109,10
     PUSHBUTTON      "Preview",IDC_BTN_CAMERA_PREVIEW,407,104,57,14
     PUSHBUTTON      "Mute Video",IDC_BTN_VIDEO_MUTE,407,122,57,14
-    COMBOBOX        IDC_COMBO_MICROPHONE,65,179,162,64,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_COMBO_SPEAKER,65,195,162,64,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "Enable Audio",IDC_CHECK_ENABLE_AUDIO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,265,179,109,10
-    PUSHBUTTON      "Mute Audio",IDC_BTN_AUDIO_MUTE,407,180,57,14
-    COMBOBOX        IDC_COMBO_SOURCE,65,244,162,64,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBO_MICROPHONE,65,196,162,64,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBO_SPEAKER,65,212,162,64,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Enable Audio",IDC_CHECK_ENABLE_AUDIO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,265,196,109,10
+    PUSHBUTTON      "Mute Audio",IDC_BTN_AUDIO_MUTE,407,197,57,14
+    COMBOBOX        IDC_COMBO_SOURCE,65,261,162,64,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     CONTROL         "Optimize Sharing for Motion",IDC_CHECK_SHARE_MOTION,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,265,244,109,10
-    PUSHBUTTON      "Start Sharing",IDC_BTN_SHARE_START,407,244,57,14
-    PUSHBUTTON      "Mute Sharing",IDC_BTN_SHARE_MUTE,407,262,57,14
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,265,261,109,10
+    PUSHBUTTON      "Start Sharing",IDC_BTN_SHARE_START,407,261,57,14
+    PUSHBUTTON      "Mute Sharing",IDC_BTN_SHARE_MUTE,407,279,57,14
     RTEXT           "Channel ID:",IDC_STATIC,16,29,42,9
     RTEXT           "User ID:",IDC_STATIC,16,49,42,9
     GROUPBOX        "Channel Setting",IDC_STATIC,15,14,456,76
-    GROUPBOX        "Video Setting",IDC_STATIC,15,97,456,62
-    GROUPBOX        "Audio Setting",IDC_STATIC,15,166,456,57
+    GROUPBOX        "Video Setting",IDC_STATIC,15,97,456,79
+    GROUPBOX        "Audio Setting",IDC_STATIC,15,183,456,57
     RTEXT           "Camera:",IDC_STATIC,18,111,43,9
     RTEXT           "Resolution:",IDC_STATIC,18,127,42,9
-    RTEXT           "Microphone:",IDC_STATIC,18,180,43,9
-    RTEXT           "Speaker:",IDC_STATIC,18,196,43,9
-    GROUPBOX        "Sharing Setting",IDC_STATIC,15,230,456,56
+    RTEXT           "Microphone:",IDC_STATIC,18,197,43,9
+    RTEXT           "Speaker:",IDC_STATIC,18,213,43,9
+    GROUPBOX        "Sharing Setting",IDC_STATIC,15,247,456,56
     RTEXT           "Scaling:",IDC_STATIC,18,143,42,9
-    RTEXT           "Source:",IDC_STATIC,18,245,43,9
+    RTEXT           "Source:",IDC_STATIC,18,262,43,9
     RTEXT           "User Name:",IDC_STATIC,16,69,42,9
+    EDITTEXT        IDC_EDIT_YUV_FILE,65,158,162,14,ES_AUTOHSCROLL
+    RTEXT           "YUV File:",IDC_STATIC,16,161,42,9
+    PUSHBUTTON      "...",IDC_BTN_YUV_BROWSE,231,158,16,14
 END
 
 
@@ -134,7 +137,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 479
         TOPMARGIN, 7
-        BOTTOMMARGIN, 293
+        BOTTOMMARGIN, 308
     END
 END
 #endif    // APSTUDIO_INVOKED
