update whiteboard, add whiteboard sdk demo code

--- a/Web/BasicVideoCall/package.json
+++ b/Web/BasicVideoCall/package.json
@@ -4,7 +4,7 @@
   "description": "Basic video call demo with panortc.",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --config webpack.config.js --progress --colors"
+    "dev": "webpack-dev-server --config webpack.config.js --progress --colors --open"
   },
   "author": "",
   "license": "MIT",
