fix build error under vs2019

--- a/Windows/PanoDemo/PanoDemo/PanoDemo.vcxproj
+++ b/Windows/PanoDemo/PanoDemo/PanoDemo.vcxproj
@@ -104,7 +104,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(ProjectDir)..\..\SDK\lib\$(Platform)\</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(ProjectDir)..\..\SDK\lib\x86\</AdditionalLibraryDirectories>
       <AdditionalDependencies>PanoRtc.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <ResourceCompile>
@@ -126,6 +126,10 @@
     <Manifest>
       <AdditionalManifestFiles>PanoDemo.manifest %(AdditionalManifestFiles)</AdditionalManifestFiles>
     </Manifest>
+    <PostBuildEvent>
+      <Command>xcopy /I /S /Y "..\..\SDK\lib\x86\PanoRtc.dll" "..\bin\$(Platform)\$(Configuration)"
+xcopy /I /S /Y "..\..\SDK\lib\x86\PanoHost.exe" "..\bin\$(Platform)\$(Configuration)"</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -162,20 +166,24 @@
     <Manifest>
       <AdditionalManifestFiles>PanoDemo.manifest %(AdditionalManifestFiles)</AdditionalManifestFiles>
     </Manifest>
+    <PostBuildEvent>
+      <Command>xcopy /I /S /Y "..\..\SDK\lib\x64\PanoRtc.dll" "..\bin\$(Platform)\$(Configuration)"
+xcopy /I /S /Y "..\..\SDK\lib\x64\PanoHost.exe" "..\bin\$(Platform)\$(Configuration)"</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
-      <ExceptionHandling />
+      <ExceptionHandling>Sync</ExceptionHandling>
       <DebugInformationFormat />
       <PreprocessorDefinitions>WIN32;_WINDOWS;STRICT;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>./pano;../../SDK/api</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <AdditionalLibraryDirectories>$(ProjectDir)..\..\SDK\lib\$(Platform)\</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(ProjectDir)..\..\SDK\lib\x86\</AdditionalLibraryDirectories>
       <AdditionalDependencies>PanoRtc.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <ResourceCompile>
@@ -197,13 +205,17 @@
     <Manifest>
       <AdditionalManifestFiles>PanoDemo.manifest %(AdditionalManifestFiles)</AdditionalManifestFiles>
     </Manifest>
+    <PostBuildEvent>
+      <Command>xcopy /I /S /Y "..\..\SDK\lib\x86\PanoRtc.dll" "..\bin\$(Platform)\$(Configuration)"
+xcopy /I /S /Y "..\..\SDK\lib\x86\PanoHost.exe" "..\bin\$(Platform)\$(Configuration)"</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
-      <ExceptionHandling />
+      <ExceptionHandling>Sync</ExceptionHandling>
       <DebugInformationFormat />
       <PreprocessorDefinitions>_WINDOWS;STRICT;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>./pano;../../SDK/api</AdditionalIncludeDirectories>
@@ -231,6 +243,10 @@
     <Manifest>
       <AdditionalManifestFiles>PanoDemo.manifest %(AdditionalManifestFiles)</AdditionalManifestFiles>
     </Manifest>
+    <PostBuildEvent>
+      <Command>xcopy /I /S /Y "..\..\SDK\lib\x64\PanoRtc.dll" "..\bin\$(Platform)\$(Configuration)"
+xcopy /I /S /Y "..\..\SDK\lib\x64\PanoHost.exe" "..\bin\$(Platform)\$(Configuration)"</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="LocalVideoWindow.cpp" />
