--- a/Web/BasicVideoCall/package.json
+++ b/Web/BasicVideoCall/package.json
@@ -12,11 +12,12 @@
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
     "babel-loader": "^8.1.0",
+    "lodash-es": "^4.17.21",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
-    "@pano.video/panortc": "^1.1.7"
+    "@pano.video/panortc": "^1.3.5"
   }
 }
