--- a/Web/Whiteboard/package.json
+++ b/Web/Whiteboard/package.json
@@ -28,8 +28,8 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
-    "@pano.video/panortc": "^1.2.7",
-    "@pano.video/whiteboard": "^1.2.6",
+    "@pano.video/panortc": ">=1.3.5",
+    "@pano.video/whiteboard": ">=2.1.3",
     "classnames": "^2.2.6",
     "element-ui": "^2.13.2",
     "lodash-es": "^4.17.15",
