--- a/Electron/BasicVideoCall/package.json
+++ b/Electron/BasicVideoCall/package.json
@@ -16,6 +16,6 @@
   },
   "dependencies": {
     "xmlhttprequest": "^1.8.0",
-    "@pano.video/panortc-electron-sdk": "^0.2.8"
+    "@pano.video/panortc-electron-sdk": ">=1.1.0"
   }
 }
