--- a/Web/BasicVideoCall/package.json
+++ b/Web/BasicVideoCall/package.json
@@ -4,7 +4,7 @@
   "description": "Basic video call demo with panortc.",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --config webpack.config.js --progress --colors --open"
+    "dev": "webpack-dev-server --config webpack.config.js --progress --color --open"
   },
   "author": "",
   "license": "MIT",
@@ -13,11 +13,11 @@
     "@babel/preset-env": "^7.9.5",
     "babel-loader": "^8.1.0",
     "lodash-es": "^4.17.21",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.2"
   },
   "dependencies": {
-    "@pano.video/panortc": ">=1.4.3"
+    "@pano.video/panortc": ">=1.4.9"
   }
 }
