--- a/Android/MultiVideoStream/app/build.gradle
+++ b/Android/MultiVideoStream/app/build.gradle
@@ -10,8 +10,8 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
 
     buildTypes {
